# PennyWise

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: _deploy.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  rollback.yml
docs/: ARCHITECTURE.md  AWS_SETUP.md  OPERATIONS.md
infra/: .gitignore  README.md  alb.tf  dynamodb.tf  ecr.tf  ecs.tf  iam.tf  locals.tf  network.tf  observability.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
infra/env/: prod.tfvars  staging.tfvars
infra/shared/: cloudtrail.tf  main.tf  oidc.tf
pennywise/: chat.py  cli.py  config.py  credentials.py  login.py  snapshot.py  tagging.py
pennywise/agents/: _llm.py  candidate_picker.py  fundamentals.py  news.py  portfolio_manager.py  risk_analyzer.py  risk_commentator.py  strategy_critic.py  strategy_synthesizer.py  technicals.py
pennywise/analytics/: classification.py  risk.py  sectors.py
pennywise/api/: app.py  auth.py  db.py  (+8 more)
scripts/: bootstrap-aws.sh  smoke.sh
tests/: conftest.py  test_api_auth_oauth.py  test_api_groww_creds.py  test_api_portfolio_upload.py  test_api_ws_chat.py  test_background_jobs.py  test_candidate_picker.py  test_chat.py  test_classification.py  test_credentials.py  test_crypto.py  test_fundamentals_node.py  test_groww.py  test_llm_client.py  test_moneycontrol.py  test_production_safety.py  test_ratelimit_shared.py  test_risk.py  test_risk_agent.py  test_screener.py  test_sectors.py  test_snapshot.py  test_ttl_cache.py
(+14 files in other folders)
