[project]
name = "pennywise"
version = "0.1.0"
description = "Agentic stock recommendation system for retail investors on Groww."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "anthropic>=0.40",
    "fastmcp>=0.4",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "google-auth>=2.29",
    "boto3>=1.34",
    "slowapi>=0.1",
    "python-multipart>=0.0.28",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-mock>=3.14", "respx>=0.21", "httpx>=0.27"]

[project.scripts]
pennywise = "pennywise.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pennywise"]
